# parallelism

./: README.md  app.py  parallelism.ipynb  pyproject.toml  worker_functions.py
notebooks/: ingestion.ipynb
src/: processors.py
