[project]
name = "parallelism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.118.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "ollama>=0.6.0",
    "qdrant-client>=1.15.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
]
